adding license file

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,12 @@ phonemizer==3.2.1
 bentoml==0.12.1
 inflect==6.0.2
 protobuf==3.19.1
+pronouncing>=0.2.0,<1
+datasets>=2.14.4,<3
+deep-phonemizer==0.0.19
+audiomentations>=0.30.0,<1
+torch-audiomentations>=0.11.0,<1
+speechbrain>=0.5.14,<1
+mutagen>=1.46.0,<2
+acoustics>=0.2.6,<1
+openwakeword
